--- a/atelier1/src/index.html
+++ b/atelier1/src/index.html
@@ -240,7 +240,7 @@
             <a href="index.html" class="logo">Vivre aux lilas</a>
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
-                <a href="bureau.html">Le Bureau</a>
+                <a href="./templates/membres.html">Le Bureau</a>
                 <a href="#">Contact</a>
             </div>
         </nav>
