--- a/atelier1/public/actus/2025-02-16-evenement-2.html
+++ b/atelier1/public/actus/2025-02-16-evenement-2.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
 </head>
-<body>
+<body class="bg-secondary-subtle">
     <header>
         <nav class="navbar navbar-lg navbar-expand-lg bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
@@ -19,7 +19,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Accueil</a>
+          <a class="nav-link" aria-current="page" href="/">Accueil</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/membres.html">Membres</a>
         </li>
       </ul>
     </div>
@@ -29,7 +32,7 @@
     <div class="container mt-4">
         
 <div class="container">
-    <div class="card mb-3 bg-secondary-subtle rounded rounded-3 border border-5 border-dark-subtle">
+    <div class="card mb-3 rounded rounded-3 border border-5 border-dark-subtle">
         <img src="../assets/img/evenement-2.webp" class="card-img-top" alt="2025-02-16-evenement-2">
         <div class="card-body">
             <p class="card-text"><h1>Atelier de jardinage urbain - Dimanche 16 février 2025</h1>
